src/test/ui/consts/miri_unleashed/abi-mismatch.stderr
error[E0080]: could not evaluate static initializer
  --> $DIR/abi-mismatch.rs:10:5
   |
LL |     my_fn();
   |     ^^^^^^^
   |     |
   |     calling a function with calling convention C using calling convention Rust
   |     inside `call_rust_fn` at $DIR/abi-mismatch.rs:10:5
...
LL | static VAL: () = call_rust_fn(unsafe { std::mem::transmute(c_fn as extern "C" fn()) });
   |                  --------------------------------------------------------------------- inside `VAL` at $DIR/abi-mismatch.rs:16:18

warning: skipping const checks
   |
help: skipping check for `const_fn_fn_ptr_basics` feature
  --> $DIR/abi-mismatch.rs:9:23
   |
LL | const fn call_rust_fn(my_fn: extern "Rust" fn()) {
   |                       ^^^^^
help: skipping check for `const_fn_fn_ptr_basics` feature
  --> $DIR/abi-mismatch.rs:10:5
   |
LL |     my_fn();
   |     ^^^^^
help: skipping check that does not even have a feature gate
  --> $DIR/abi-mismatch.rs:10:5
   |
LL |     my_fn();
   |     ^^^^^^^

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0080`.
